force-app/main/default/objects/MessagingSession/fields/ABC_Origin__c.field-meta.xml
<CustomField>
    <fullName>ABC_Origin__c</fullName>
    <description>Only for ABC channel type</description>
    <formula>IF( AND(ISBLANK (ChannelGroup),  MessagingChannel.MasterLabel = &quot;ABC&quot;), &quot;Italian LV Website&quot;, &quot;Chat Suggest&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Only for ABC messages</inlineHelpText>
    <label>ABC Origin</label>
    <type>Text</type>
</CustomField>