force-app/main/default/objects/MessagingSession/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client who sent the message</description>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>