force-app/main/default/objects/MessagingSession/fields/Domaine__c.field-meta.xml
<CustomField>
    <fullName>Domaine__c</fullName>
    <description>Domaine of message</description>
    <label>Domaine</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ICX_Domain</valueSetName>
    </valueSet>
</CustomField>