force-app/main/default/objects/MessagingSession/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <description>Nature of message</description>
    <label>Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ICX_Nature</valueSetName>
    </valueSet>
</CustomField>