force-app/main/default/objects/MessagingSession/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>