force-app/main/default/objects/MessagingSession/fields/PreviewDetails__c.field-meta.xml
<CustomField>
    <fullName>PreviewDetails__c</fullName>
    <formula>IF(ISPICKVAL(MessagingEndUser.MessageType, &apos;AppleBusinessChat&apos;) ,

MessagingChannel.MasterLabel+ &quot; | &quot; + Queue_Name__c,

MessagingEndUser.MessagingPlatformKey + &quot; | &quot; + Queue_Name__c + &quot; | &quot; + TEXT(MessagingEndUser.MessageType)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PreviewDetails</label>
    <type>Text</type>
</CustomField>