force-app/main/default/objects/MessagingSession/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product SKU for messaging</description>
    <label>Product SKU</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>