force-app/main/default/objects/MessagingSession/fields/Purchased_Product__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchased Product</label>
    <referenceTo>PPR_PurchProduct__c</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>