force-app/main/default/objects/MessagingSession/fields/Queue_Developper_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Developper_Name__c</fullName>
    <description>Queue developper name</description>
    <label>Queue Developper Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>