force-app/main/default/objects/MessagingSession/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>Queue Name</description>
    <label>Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>