force-app/main/default/objects/MessagingSession/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Resolution of message</description>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ICX_Resolution</valueSetName>
    </valueSet>
</CustomField>