force-app/main/default/objects/MessagingSession/fields/Sku_Number__c.field-meta.xml
<CustomField>
    <fullName>Sku_Number__c</fullName>
    <formula>Product_SKU__r.SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sku Number</label>
    <type>Text</type>
</CustomField>