force-app/main/default/objects/MessagingSession/fields/Tech_ChannelIntent__c.field-meta.xml
<CustomField>
    <fullName>Tech_ChannelIntent__c</fullName>
    <formula>ChannelIntent</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech ChannelIntent</label>
    <type>Text</type>
</CustomField>