force-app/main/default/objects/MessagingSession/fields/TECH_ChannelType__c.field-meta.xml
<CustomField>
    <fullName>TECH_ChannelType__c</fullName>
    <formula>TEXT(MessagingChannel.MessageType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH ChannelType</label>
    <type>Text</type>
</CustomField>