force-app/main/default/objects/MessagingSession/fields/Tech_IsAccepted__c.field-meta.xml
<CustomField>
    <fullName>Tech_IsAccepted__c</fullName>
    <formula>NOT(ISBLANK( AcceptTime ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_IsAccepted</label>
    <type>Checkbox</type>
</CustomField>