force-app/main/default/objects/MessagingSession/fields/TECH_Queue_Messaging__c.field-meta.xml
<CustomField>
    <fullName>TECH_Queue_Messaging__c</fullName>
    <description>Tech Queue of messaging</description>
    <label>TECH Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>