force-app/main/default/objects/MessagingSession/fields/TECH_Resolution_Empty__c.field-meta.xml
<CustomField>
    <fullName>TECH_Resolution_Empty__c</fullName>
    <description>Resolution is empty so flow is available on lightning page  layout</description>
    <formula>ISPICKVAL ( Resolution__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Resolution Empty</label>
    <type>Checkbox</type>
</CustomField>