force-app/main/default/objects/MessagingSession/recordTypes/Messaging.recordType-meta.xml
<RecordType>
    <fullName>Messaging</fullName>
    <active>true</active>
    <description>Record Type for Messaging</description>
    <label>Messaging</label>
</RecordType>