force-app/main/default/objects/MessagingSession/listViews/All_Messaging_Sessions.listView-meta.xml
<ListView>
    <fullName>All_Messaging_Sessions</fullName>
    <columns>Name</columns>
    <columns>Owner__c</columns>
    <columns>MessagingChannel</columns>
    <columns>ChannelType</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>EndUserAccount</columns>
    <columns>Queue_Name__c</columns>
    <columns>Queue_Developper_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>1,2</value>
    </filters>
    <filters>
        <field>EndTime</field>
        <operation>equals</operation>
        <value>7/30/2023 12:00 AM</value>
    </filters>
    <label>All Messaging Sessions</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <role>Corporate_Central</role>
    </sharedTo>
</ListView>