force-app/main/default/objects/MessagingSession/listViews/Inappropriate_message_user.listView-meta.xml
<ListView>
    <fullName>Inappropriate_message_user</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>PlatformType</columns>
    <columns>Client_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingEndUser</field>
        <operation>equals</operation>
        <value>whatsapp:+85262190224,urn:mbid:AQAAY2xKugqXoiJhIamMyORJi7xBV9i28gwH09AlfbV4NV5PB+aJ+LwO5bUWTD0k735S0bsUtq0YXu34zb3j0msGRPrRYBwKgU3M5pRz94tE63GyKkjdW6b/aX05ppXGFHKsI4cGPjdW3lg1r9boYEYubsTN1I4=</value>
    </filters>
    <label>Inappropriate messaging user HK</label>
    <sharedTo>
        <group>CSC_Hong_Kong_Macao</group>
        <group>Chat_Hong_Kong_En</group>
        <group>Chat_Hong_Kong_Zh</group>
    </sharedTo>
</ListView>