force-app/main/default/objects/MessagingSession/listViews/Inappropriate_messaging_user_USA.listView-meta.xml
<ListView>
    <fullName>Inappropriate_messaging_user_USA</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>PlatformType</columns>
    <columns>Client_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingEndUser</field>
        <operation>equals</operation>
        <value>urn:mbid:AQAAY2xKugqXoiJhIamMyORJi7xBV9i28gwH09AlfbV4NV5PB+aJ+LwO5bUWTD0k735S0bsUtq0YXu34zb3j0msGRPrRYBwKgU3M5pRz94tE63GyKkjdW6b/aX05ppXGFHKsI4cGPjdW3lg1r9boYEYubsTN1I4=</value>
    </filters>
    <label>Inappropriate messaging user USA</label>
    <sharedTo>
        <roleAndSubordinatesInternal>AME_CSC_US_CA_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>