force-app/main/default/objects/MessagingSession/listViews/Messaging_ABC_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Messaging_ABC_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Messaging ABC</label>
    <queue>Messaging_ABC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>