force-app/main/default/objects/MessagingSession/listViews/Messaging_Australia.listView-meta.xml
<ListView>
    <fullName>Messaging_Australia</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2</value>
    </filters>
    <filters>
        <field>Queue_Developper_Name__c</field>
        <operation>equals</operation>
        <value>Messaging_Australia</value>
    </filters>
    <label>Messaging Australia</label>
    <sharedTo>
        <group>Chat_Australia</group>
        <role>Corporate_Digital</role>
    </sharedTo>
</ListView>