force-app/main/default/objects/MessagingSession/listViews/Messaging_Automated_Process.listView-meta.xml
<ListView>
    <fullName>Messaging_Automated_Process</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner__c</field>
        <operation>equals</operation>
        <value>Automated Process</value>
    </filters>
    <label>Messaging Automated Process</label>
    <sharedTo>
        <group>CSC_Corporate</group>
        <group>admin</group>
    </sharedTo>
</ListView>