force-app/main/default/objects/MessagingSession/listViews/Messaging_Canada.listView-meta.xml
<ListView>
    <fullName>Messaging_Canada</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2</value>
    </filters>
    <filters>
        <field>Queue_Developper_Name__c</field>
        <operation>equals</operation>
        <value>Messaging_Canada</value>
    </filters>
    <label>Messaging Canada</label>
    <sharedTo>
        <group>Chat_Canada_Fr</group>
    </sharedTo>
</ListView>