force-app/main/default/objects/MessagingSession/listViews/Messaging_Facebook_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Messaging_Facebook_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Queue_Name__c</columns>
    <filterScope>Queue</filterScope>
    <label>Messaging Facebook</label>
    <queue>Messaging_Facebook</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>